...
import androidx.compose.ui.Modifier
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.unit.dp
import androidx.lifecycle.viewmodel.compose.viewModel
import com.gap.hoodies_network.sample.SampleViewModel

enum class SampleScreen(val title: String, val tag: String) {
    GET("GET", "get"),
    POST("POST", "post"),
    IMAGE("Image", "image"),
    CACHE("Cache", "cache"),
    INTERCEPTOR("Interceptor", "interceptor"),
}
...
